--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy==1.8.0
-sqlalchemy==0.8.3
+sqlalchemy==0.9.1
 pytest==2.4.2,
 pytest-cov==1.6
 colorama==0.2.4
 termcolor==1.1.0
+logbook==0.6.0
