--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: python
 python:
   - "3.3"
-install: "pip install -r requirements.txt"
+install:
+  - "pip install -r requirements.txt --use-mirrors"
+  - "pip install -e ."
 script: "python setup.py test"
